Fixed layout spacings

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -57,6 +57,10 @@
   font-size: 1.3rem;
   color: var(--text1-op-full);
   font-weight: 500;
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+  }
 }
 
 .paragraph-xl-md {
@@ -64,6 +68,10 @@
   font-size: 1.3rem;
   color: var(--text1-op-full);
   font-weight: 400;
+
+  @media (max-width: 768px) {
+    font-size: 1.2rem;
+  }
 }
 
 .subheading {
@@ -77,6 +85,6 @@
 
 .subheading-2 {
   font-family: var(--ff-3);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   @apply text-acc-1;
 }
